@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.83 (gritter) 7/23/06
+.\" Sccsid @(#)doc.tr	1.84 (gritter) 7/29/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -89,7 +89,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 7/23/06
+.ds Sccsdate 7/29/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -1753,6 +1753,7 @@ T}	\T'e_s'Point-size change function\T
 \T'e_w'11.2\T	\T'e_w'\fB\ew\fI\'string\'\fR\T	\T'e_w'Interpolate width of \fIstring\fR\T
 \T'e_x'5.2\T	\T'e_x'\fB\ex\fI\'N\'\fR\T	\T'e_x'Extra line-space function \fI(negative before, positive after)\fR\T
 \T'e_X'10.7\T	\T'e_X'\fB\eX\fI\'string\'\fR\T	\T'e_X'Output \fIstring\fP as device control function\T
+\T'e_Y'10.7\T	\T'e_Y'\fB\eY\fIx\fR,\fB\eY(\fIxx\fR,\fB\eY[\fIxxx\fB]\fR\T	\T'e_Y'Output contents of macro \fIx\fP, \fIxx\fR, or \fIxxx\fR\T as device control function
 \T'e_z'12.2\T	\T'e_z'\fB\ez\fIc\fR\T	\T'e_z'Print \fIc\fR with zero width (without spacing)\T
 \T'e_{'16\T	\T'e_{'\fB\e{\fR\T	\T'e_{'Begin conditional input\T
 \T'e_}'16\T	\T'e_}'\fB\e}\fR\T	\T'e_}'End conditional input\T
@@ -1775,6 +1776,7 @@ The escape sequences
 \fB\T'e_t'\et\T\fR,
 \fB\T'e_V'\eV\T\fR,
 \fB\T'e_X'\eX\T\fR,
+\fB\T'e_Y'\eY\T\fR,
 and
 \fB\T'e_newline'\e\fR(newline)\T are interpreted
 in \T'copy mode'\fIcopy mode\fR (\(sc7.2).\T
@@ -3315,7 +3317,7 @@ The input is copied without interpretation
 \*+ Strings indicated by \T'e_*'\fB\e\(**\fR\T are interpolated.
 \*+ Arguments indicated by \T'e_$'\fB\e$\fR\T are interpolated.
 \*+ Environment variables indicated by \T'e_V'\fB\eV\fR\T are interpolated.
-\*+ Device control functions indicated by \T'e_X'\fB\eX\fR\T are executed.
+\*+ Device control functions indicated by \T'e_X'\fB\eX\fR\T and \T'e_Y'\fB\eY\fR\T are executed.
 \*+ Concealed newlines indicated by \T'e_newline'\fB\e\fR\T(newline) are eliminated.
 \*+ Comments indicated by \T'e_"'\fB\e"\fR\T or \T'e_#'\fB\e#\fR\T are eliminated.
 \*+ \T'e_t'\fB\et\fR\T and \T'e_a'\fB\ea\fR\T are interpreted as \s-1ASCII\s+1 horizontal tab and \s-1SOH\s+1 respectively \T's_tabs'(\(sc9).\T
@@ -4069,6 +4071,14 @@ to the output,
 as a device control function in the form \fBx\ X\ \fIanything\fR
 \T's_device'(\(sc25).\T
 Escape sequences in \fIanything\fR are processed.
+The sequence \A'e_Y'\fB\eY\fIx\fR,
+\fB\eY(\fIxx\fR, or
+\fB\eY[\fIxxx\fB]\fR
+copies the contents of the string or macro
+\fIx\fR, \fIxx\fR, or \fIxxx,\fR, respectively,
+to the output as a device control function
+without processing escape sequences.
+Newlines in the macro are embedded in the output.
 .sc
 Comments and concealed newlines.
 An uncomfortably long input line that must stay
@@ -5556,7 +5566,7 @@ then a command, then other parameters.
 \fBx H \fIn\fP	\fRset character height to \fIn\fR, fractional parts (if any) ignored
 \fBx H \-23 \fId.d\fR	set character height to \fId.d\fR
 \fBx S \fIn\fP	\fRset slant to \fIn\fR
-\fBx X \fIany\fP	\fRgenerated by the \T'e_X'\fB\eX\fR function\T
+\fBx X \fIany\fP	\fRgenerated by the \T'e_X'\fB\eX\fR\T and \T'e_Y'\fB\eY\fR functions\T
 \fBx X BleedAt \fIL T W H\fR	generated by the \T'bleedat'\fBbleedat\fR request\T
 \fBx X CropAt \fIL T W H\fR	generated by the \T'cropat'\fBcropat\fR request\T
 \fBx X HorScale \fIpercent\fR	scale letters horizontally by \fIpercent\fR (with the \T'letadj'\fBletadj\fR\T request)
