@@ -5,7 +5,7 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)/usr/ucblib/pm.sl	1.4 (gritter) 10/31/05";
+static const char sccsid[] USED = "@(#)/usr/ucblib/pm.sl	1.5 (gritter) 7/29/06";
 /* SLIST */
 /*
 misc.h:	Sccsid @(#)misc.h	1.3 (gritter) 10/30/05	
@@ -16,5 +16,5 @@ misc.cc:	Sccsid @(#)misc.cc	1.3 (gritter) 10/30/05
 page.cc:	Sccsid @(#)page.cc	1.4 (gritter) 10/30/05	
 queue.cc:	Sccsid @(#)queue.cc	1.3 (gritter) 10/30/05	
 range.cc:	Sccsid @(#)range.cc	1.3 (gritter) 10/30/05	
-slug.cc:	Sccsid @(#)slug.cc	1.6 (gritter) 10/31/05	
+slug.cc:	Sccsid @(#)slug.cc	1.7 (gritter) 7/29/06	
 */
